# pglite-oxide

./: .gitignore  CHANGELOG.md  Cargo.toml  prek.toml  release-plz.toml
.github/scripts/: check-release-changelog.sh
.github/workflows/: release.yml
crates/aot/aarch64-apple-darwin/: Cargo.toml
crates/aot/aarch64-unknown-linux-gnu/: Cargo.toml
crates/aot/x86_64-pc-windows-msvc/: Cargo.toml
crates/aot/x86_64-unknown-linux-gnu/: Cargo.toml
crates/assets/: Cargo.toml
docs/: RELEASE.md
scripts/: check-example-lockfiles.sh  sync-example-lockfiles.py  validate.sh
xtask/src/: main.rs
