[package]
name = "pglite-oxide"
version = "0.4.1"
edition = "2024"
rust-version = "1.92"
description = "Embedded Postgres for Rust tests and local apps. No Docker, works with SQLx and any Postgres client."
readme = "README.md"
repository = "https://github.com/f0rr0/pglite-oxide"
homepage = "https://github.com/f0rr0/pglite-oxide"
documentation = "https://docs.rs/pglite-oxide"
keywords = ["postgres", "pglite", "wasm", "database", "embedded"]
categories = ["database-implementations", "wasm", "development-tools::testing"]
license = "MIT AND Apache-2.0 AND PostgreSQL"
exclude = [
  ".github/**",
  "Cargo.toml.orig",
  "assets/checkouts/**",
  "assets/wasix-build/build/**",
  "assets/wasix-build/work/**",
  "crates/**",
  "examples/tauri-sqlx-vanilla/**",
  "release-plz.toml",
  "xtask/**",
]

[workspace]
members = [
  ".",
  "crates/assets",
  "crates/aot/aarch64-apple-darwin",
  "crates/aot/x86_64-unknown-linux-gnu",
  "crates/aot/aarch64-unknown-linux-gnu",
  "crates/aot/x86_64-pc-windows-msvc",
  "xtask",
]
exclude = ["examples/tauri-sqlx-vanilla/src-tauri"]
resolver = "3"

[features]
default = ["bundled", "extensions"]
bundled = [
  "dep:pglite-oxide-assets",
  "dep:pglite-oxide-aot-aarch64-apple-darwin",
  "dep:pglite-oxide-aot-x86_64-unknown-linux-gnu",
  "dep:pglite-oxide-aot-aarch64-unknown-linux-gnu",
  "dep:pglite-oxide-aot-x86_64-pc-windows-msvc",
]
extensions = ["bundled"]

[package.metadata.pglite-oxide.assets]
postgres-version = "17.5"
postgres-pglite-branch = "REL_17_5-pglite"
pglite-build-repo = "electric-sql/pglite-build"
pglite-build-branch = "portable"
pglite-build-commit = "c195113dbaf09488f8d5eeb2db91dacd123b74d0"
pglite-npm-version-checked = "0.4.5"
runtime-archive-sha256 = "8c2271c53d4f2786f7406ec0211e679e1a13352fc14ae87215ae3569b547fc1f"
pglite-wasix-sha256 = "4ce77a543675b25a5b1fd93c62bd175576bf1fee0266b9fd96fac193bf13b811"
pgdata-template-archive-sha256 = "a0a91f4fbd0428787ce78b351ee84f0c33f9ce8578448701b0f6080f7d8b052e"
pg-dump-wasix-sha256 = "59482f1193c35147c1b50e6a5fd9bc2dfed4b15e0624102c4da93a266d8303ed"
initdb-wasix-sha256 = ""

[dependencies]
anyhow = "1"
async-trait = "0.1"
tar = "0.4"
zstd = { version = "0.13", default-features = false }
directories = "6"
tracing = "0.1"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tempfile = "3"
hex = "0.4"
sha2 = "0.10"
dunce = "1"
filetime = "0.2"
pglite-oxide-assets = { version = "=0.4.1", path = "crates/assets", optional = true }
tokio = { version = "1", features = ["io-util", "rt-multi-thread"] }
wasmer = { version = "7.2.0-alpha.2", default-features = false, features = [
  "sys",
  "headless",
  "compiler",
  "wasmer-artifact-load",
] }
wasmer-config = "0.702.0-alpha.2"
wasmer-types = "7.2.0-alpha.2"
wasmer-wasix = { version = "0.702.0-alpha.2", default-features = false, features = [
  "sys-minimal",
  "sys-poll",
  "host-vnet",
  "time",
] }
webc = "11.0.0"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
pglite-oxide-aot-aarch64-apple-darwin = { version = "=0.4.1", path = "crates/aot/aarch64-apple-darwin", optional = true }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
pglite-oxide-aot-x86_64-unknown-linux-gnu = { version = "=0.4.1", path = "crates/aot/x86_64-unknown-linux-gnu", optional = true }

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
pglite-oxide-aot-aarch64-unknown-linux-gnu = { version = "=0.4.1", path = "crates/aot/aarch64-unknown-linux-gnu", optional = true }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
pglite-oxide-aot-x86_64-pc-windows-msvc = { version = "=0.4.1", path = "crates/aot/x86_64-pc-windows-msvc", optional = true }

[dev-dependencies]
sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "runtime-tokio",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = "0.7"

[[bin]]
name = "pglite-dump"
path = "src/bin/pglite_dump.rs"

[[bin]]
name = "pglite-proxy"
path = "src/bin/pglite_proxy.rs"
