[package]
name = "pglite-oxide-aot-x86_64-unknown-linux-gnu"
version = "0.4.1"
edition = "2024"
rust-version = "1.92"
description = "Internal Wasmer AOT artifacts for pglite-oxide on x86_64-unknown-linux-gnu"
repository = "https://github.com/f0rr0/pglite-oxide"
license = "MIT AND Apache-2.0 AND PostgreSQL"
publish = true
include = ["Cargo.toml", "README.md", "build.rs", "src/**", "artifacts/**"]

[lib]
path = "src/lib.rs"
